Implement Customer Order System with Inventory Management and Order Processing
- Added CustomerOrderTest.cpp to facilitate testing of the customer order process.
- Enhanced InventoryManager to track sold plants and manage inventory updates upon sales.
- Introduced Order, OrderItem, and PlantBundle classes to structure order data and manage items.
- Developed OrderValidationHandler and PaymentProcessHandler to validate orders and process payments.
- Implemented NotificationHandler for customer notifications on order status.
- Created PlaceOrderCommand to encapsulate order placement logic.
- Updated Makefile to include new test targets for customer order functionality.
- Improved user interface for customer interactions in the order process.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,31 @@
-VISITOR_PATTERN_EXPLANATION
-COS 214 Final Project
-.vscode
+# Compiled Object files
+*.o
+*.obj
+
+# Executables
+greenhouse
+test_move_to_sales_floor
+test_*
+
+# Coverage files
+*.gcda
+*.gcno
+*.gcov
+coverage.info
+out/
+
+# VS Code
+.vscode/
+
+# Documentation (if you want to ignore it)
+VISITOR_PATTERN_EXPLANATION.md
+*.pdf
+
+# Build directories
+build/
+bin/
+
+# System files
+.DS_Store
+*.swp
+*~
