Visitor gone, chrono added to profiles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,6 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "chrono": "cpp"
+        "span": "cpp"
     }
 }
